Fix google font link
changed google font link

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ img {
 }
 
 h1, h2 {
-  font-family: 'Patua One', serif;
+  font-family: "Patua One", serif;
   color: #5d8432;
   text-transform: uppercase;
 }
